# RTMPPush

./: README.md
app/: build.gradle
app/src/androidTest/java/com/gg/demo/rtmppush/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  CMakeLists.txt  Marco.h  VideoChannel.cpp  VideoChannel.h  native-lib.cpp  safe_queue.h
app/src/main/cpp/librtmp/: CMakeLists.txt  rtmp.c
app/src/main/java/com/gg/demo/rtmppush/: CameraHelper.java  LivePusher.java  MainActivity.java
app/src/main/java/com/gg/demo/rtmppush/meida/: AudioChannel.java  CameraHelper.java  VideoChannel.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/gg/demo/rtmppush/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
